--- a/isutomo/glide.yaml
+++ b/isutomo/glide.yaml
@@ -2,3 +2,5 @@ package: isucon1/webapp/go/isutomo
 import:
 - package: github.com/go-sql-driver/mysql
 - package: github.com/gorilla/mux
+- package: github.com/newrelic/go-agent
+  version: ^1.11.0
