--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,16 @@
 .glide/
 isutomo/isutomo
 isuwitter/isuwitter
+
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+# session
+# Session.vim
+# # temporary
+# .netrwhist
+# *~
+# # auto-generated tag files
+# tags
 # End of https://www.gitignore.io/api/go
