--- a/isuwitter/glide.yaml
+++ b/isuwitter/glide.yaml
@@ -4,3 +4,5 @@ import:
 - package: github.com/gorilla/mux
 - package: github.com/gorilla/sessions
 - package: github.com/unrolled/render
+- package: github.com/newrelic/go-agent
+  version: ^1.11.0
