--- a/isuwitter/glide.yaml
+++ b/isuwitter/glide.yaml
@@ -6,3 +6,5 @@ import:
 - package: github.com/unrolled/render
 - package: github.com/newrelic/go-agent
   version: ^1.11.0
+- package: github.com/go-redis/redis
+  version: ^6.7.4
